Added team pictures and overlay text

--- a/index.html
+++ b/index.html
@@ -16,8 +16,27 @@
   </nav>
 
   <section class="section" id="name-section">
-      <div class="text" id="name-text">
+      <!-- <div class="text" id="name-text">
           I am Kimberly
+      </div> -->
+      <div data-content="AFX" class="gallery">
+        <!-- <a target="#" href="assets/img/afx.jpg"> -->
+        <a href="#">
+          <img src="assets/img/afx.jpg">
+        </a>
+        <!-- <div class="desc">Add a description of the image here</div> -->
+      </div>
+
+      <div data-content="Danceworx" class="gallery">
+        <a href="#">
+          <img src="assets/img/dwx.jpg">
+        </a>
+      </div>
+
+      <div data-content="Movement" class="gallery">
+        <a href="#">
+          <img src="assets/img/movement.jpg">
+        </a>
       </div>
   </section>
 
