Added workshops/team page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <title>Hi There!</title>
   <link rel="stylesheet" type="text/css" href="assets/css/homeStyles.css"/>
-  <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
 </head>
 
 <body id="home">
@@ -12,22 +13,35 @@
   <nav class="nav-bar">
     <a class="nav-item" id="home-link" href="#">HOME</a>
     <a class="nav-item" href="#">TEAMS</a>
-    <a class="nav-item" href="#">WORKSHOPS</a>
+    <a class="nav-item" href="workshops.html">WORKSHOPS</a>
   </nav>
 
   <section class="section" id="name-section">
+    <div class="img-container">
+      <img class="image" src="assets/img/afx.jpg" alt="AFX">
+      <div class="overlay">
+        <div class="text">AFX</div>
+      </div>
+    </div>
+
+    <div class="img-container">
+      <img class="image" src="assets/img/dwx.jpg" alt="Danceworx">
+      <div class="overlay">
+        <div class="text">Danceworx</div>
+      </div>
+    </div>
+
+    <div class="img-container">
+      <img class="image" src="assets/img/movement.jpg" alt="Movement">
+      <div class="overlay">
+        <div class="text">Movement</div>
+      </div>
+    </div>
       <!-- <div class="text" id="name-text">
           I am Kimberly
       </div> -->
-      <div data-content="AFX" class="gallery">
-        <!-- <a target="#" href="assets/img/afx.jpg"> -->
-        <a href="#">
-          <img src="assets/img/afx.jpg">
-        </a>
-        <!-- <div class="desc">Add a description of the image here</div> -->
-      </div>
 
-      <div data-content="Danceworx" class="gallery">
+      <!-- <div data-content="Danceworx" class="gallery">
         <a href="#">
           <img src="assets/img/dwx.jpg">
         </a>
@@ -37,7 +51,7 @@
         <a href="#">
           <img src="assets/img/movement.jpg">
         </a>
-      </div>
+      </div> -->
   </section>
 
 </body>
