--- a/workshops.html
+++ b/workshops.html
@@ -6,8 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
         <link rel="stylesheet" href="assets/css/workshopsStyles.css">
-        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+        <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
         </script>
         <script src = "assets/js/script.js"></script>
     </head>
@@ -29,7 +29,7 @@
                     </div>
 
                     <div class="carousel-item">
-                      <img class="image" src="assets/img/afx_background_2.png">
+                      <img class="image" id="afxLight" src="assets/img/afx_background_2.png">
                     </div>
 
                     <div class="carousel-item">
