Home screen UI changes

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
   <title>Hi There!</title>
   <link rel="stylesheet" type="text/css" href="assets/css/homeStyles.css"/>
   <!-- <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> -->
-  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"> 
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 
 <body id="home">
-  <img id="background-img" src="assets/img/bdc.png">
+  <div id="main-background">
+    <img id="background-img" src="assets/img/bdc.png">
+  </div>
 
   <nav class="nav-bar">
     <a class="nav-item" id="home-link" href="#">HOME</a>
@@ -16,42 +18,83 @@
     <a class="nav-item" href="workshops.html">WORKSHOPS</a>
   </nav>
 
-  <section class="section" id="name-section">
-    <div class="img-container">
-      <img class="image" src="assets/img/afx.jpg" alt="AFX">
-      <div class="overlay">
-        <div class="text">AFX</div>
-      </div>
+  <section class="section" id="teams-section">
+      <div class="row">
+        <div class="img-container">
+          <img class="image" src="assets/img/afx.jpg" alt="AFX">
+          <div class="overlay">
+            <div class="text">
+              AFX
+              <!-- <div class="sub-text">
+                Aspirations Family Experience
+              </div> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="img-container">
+          <img class="image" src="assets/img/dwx.jpg" alt="Danceworx">
+          <div class="overlay">
+            <div class="text">
+              Danceworx
+              <div class="sub-text">
+                Redirects to Danceworx website
+              </div>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="img-container">
+          <img class="image" src="assets/img/idxresize2.png" alt="IDX">
+          <div class="overlay">
+            <div class="text">
+              Identity X
+              <div class="sub-text">
+                Coming Soon!
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 
-    <div class="img-container">
-      <img class="image" src="assets/img/dwx.jpg" alt="Danceworx">
-      <div class="overlay">
-        <div class="text">Danceworx</div>
+    <div class="row">
+      <div class="img-container">
+        <img class="image" src="assets/img/lindy.jpg" alt="Lindy on Sproul">
+        <div class="overlay">
+          <div class="text">
+            Lindy on Sproul
+            <div class="sub-text">
+              Coming Soon!
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="img-container">
+        <img class="image" src="assets/img/mainstacks.jpg" alt="Main Stacks">
+        <div class="overlay">
+          <div class="text">
+            Main Stacks
+            <div class="sub-text">
+              Coming Soon!
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="img-container">
+        <img class="image" src="assets/img/movement.jpg" alt="Movement">
+        <div class="overlay">
+          <div class="text">
+            Movement
+            <div class="sub-text">
+              Coming Soon!
+            </div>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="img-container">
-      <img class="image" src="assets/img/movement.jpg" alt="Movement">
-      <div class="overlay">
-        <div class="text">Movement</div>
-      </div>
-    </div>
-      <!-- <div class="text" id="name-text">
-          I am Kimberly
-      </div> -->
-
-      <!-- <div data-content="Danceworx" class="gallery">
-        <a href="#">
-          <img src="assets/img/dwx.jpg">
-        </a>
-      </div>
-
-      <div data-content="Movement" class="gallery">
-        <a href="#">
-          <img src="assets/img/movement.jpg">
-        </a>
-      </div> -->
   </section>
 
 </body>
