AFX page and link works

--- a/afx.html
+++ b/afx.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-        <link rel="stylesheet" href="assets/css/workshopsStyles.css">
+        <link rel="stylesheet" href="assets/css/afxStyle.css">
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
         </script>
@@ -14,8 +14,8 @@
     <body>
       <nav class="nav-bar">
         <a class="nav-item" href="index.html">HOME</a>
-        <a class="nav-item" href="#">TEAMS</a>
-        <a class="nav-item" id="workshops-link" href="workshops.html">WORKSHOPS</a>
+        <a class="nav-item" id="teams-link" href="#">TEAMS</a>
+        <!-- <a class="nav-item" href="workshops.html">WORKSHOPS</a> -->
       </nav>
         <!-- Page Wrapper, Consisting of All the Sections -->
         <div class = "page-wrapper">
@@ -29,11 +29,11 @@
                     </div>
 
                     <div class="carousel-item">
-                      <img class="image" id="afxLight" src="assets/img/afx_background_2.png">
+                      <img class="image" src="assets/img/afxFusion.jpg">
                     </div>
 
                     <div class="carousel-item">
-                      <img class="image" src="assets/img/afxFusion.jpg">
+                      <img class="image" src="assets/img/afxGeneralAuditions.jpg">
                     </div>
 
                     <div class="carousel-item">
@@ -51,32 +51,31 @@
                 </div>
             </section>
             <!-- Name Section -->
-            <section class = "section" id = "name-section">
-                <div class = "text" id = "name-text">
-                    <!-- I am ENTER NAME HERE -->
-                    Description
+            <section class = "section" id = "description-section">
+                <div class = "text">
+                  About
+                </div>
+
+                <div class="text sub-text">
+                  AFX Dance is a hip hop/urban dance group founded in Fall 2011 to give dancers an opportunity to grow. Our name, [A]spirations, [F]amily, e[X]perience reflects our philosophy of creating a family environment for dancers to build up the confidence and support to reach new heights.  With Competition (competitive advanced), Project (intermediate-advanced), and Training (beginner) levels, we hope to provide dancers, choreographers, and directors with new, fulfilling experiences that will empower them to pass on our philosophies to the greater community.
                 </div>
             </section>
             <!-- Major Section -->
-            <section class = "section" id = "major-section">
+            <!-- <section class = "section" id = "major-section">
                 <div class = "text" id = "major-text">
-                    <!-- I am majoring in ENTER MAJOR HERE -->
                     Teams
                 </div>
             </section>
-            <!-- Random Fact Section -->
             <section class = "section" id = "fact-section">
                 <div class = "text" id = "fact-text">
-                    <!-- ENTER RANDOM FACT HERE -->
                     News
                 </div>
-            </section>
-            <section class = "section" id = "fact-section">
+            </section> -->
+            <!-- <section class = "section" id = "fact-section">
                 <div class = "text" id = "fact-text">
-                    <!-- ENTER RANDOM FACT HERE -->
                     Videos
                 </div>
-            </section>
+            </section> -->
         </div>
     </body>
 </html>
