--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Hi There!</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/homeStyles.css"/>
+  <link rel="stylesheet" type="text/css" href="assets/css/homeStyle.css"/>
   <!-- <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet"> -->
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
@@ -14,23 +14,27 @@
 
   <nav class="nav-bar">
     <a class="nav-item" id="home-link" href="#">HOME</a>
-    <a class="nav-item" href="#">TEAMS</a>
-    <a class="nav-item" href="workshops.html">WORKSHOPS</a>
+    <a class="nav-item" href="afx.html">TEAMS</a>
+    <!-- <a class="nav-item" href="">WORKSHOPS</a> -->
   </nav>
 
   <section class="section" id="teams-section">
       <div class="row">
-        <div class="img-container">
-          <img class="image" src="assets/img/afx.jpg" alt="AFX">
-          <div class="overlay">
-            <div class="text">
-              AFX
-              <!-- <div class="sub-text">
-                Aspirations Family Experience
-              </div> -->
+
+        <a href="afx.html">
+
+          <div class="img-container">
+            <img class="image" src="assets/img/afx.jpg" alt="AFX">
+            <div class="overlay">
+              <div class="text">
+                AFX
+                <!-- <div class="sub-text">
+                  Aspirations Family Experience
+                </div> -->
+              </div>
             </div>
           </div>
-        </div>
+        </a>
 
         <div class="img-container">
           <img class="image" src="assets/img/dwx.jpg" alt="Danceworx">
