--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="text">
               Danceworx
               <div class="sub-text">
-                Redirects to Danceworx website
+                Coming soon!
               </div>
             </div>
 
